--- a/css/content.css
+++ b/css/content.css
@@ -212,6 +212,9 @@
     padding-left: 0;
     padding-right: 0;
 }
+.global-list-item.myself {
+    font-weight: bold;
+}
 .auction-item{
     padding: 0;
     min-height: 50px;
