--- a/css/global.css
+++ b/css/global.css
@@ -111,6 +111,12 @@ p {
     border-bottom: 1px solid #e6e6f1;
     margin-bottom: 15px;
 }
+.menu-vertical .menu-divider{
+    width: 100%;
+    border: 1px solid #2c2d51;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 .tab {
     display: inline-block;
     vertical-align: bottom;
