--- a/css/content.css
+++ b/css/content.css
@@ -267,6 +267,7 @@
     margin: 0 auto;
 }
 .auction-item .auction-detail {
+    display: none;
     border-top: 2px solid #2c2d51;
     border-bottom: 2px solid #2c2d51;
     padding: 10px;
