--- a/app/components/Account/Profile/userProfileView.html
+++ b/app/components/Account/Profile/userProfileView.html
@@ -1,32 +1,46 @@
 <div class="user-page" ng-open="formLabels('changePasswordForm')">
   <div class="col-md-6 col-xs-12 col-md-offset-0 table-wrapper">
     <h1>{{'texts.your_acc' | i18next}}</h1>
-    <table class="table table-striped table-responsive">
-      <tr>
-        <th>{{'texts.username' | i18next}}:</th>
-        <td>{{userInfo.username}}</td>
-      </tr>
-      <tr>
-        <th>{{'texts.address_city' | i18next}}:</th>
-        <td>{{userInfo.address_city}}</td>
-      </tr>
-      <tr>
-        <th>{{'texts.address_street' | i18next}}:</th>
-        <td>{{userInfo.address_street}}</td>
-      </tr>
-      <tr>
-        <th>{{'texts.email' | i18next}}:</th>
-        <td>{{userInfo.email}}</td>
-      </tr>
-      <tr>
-        <th>{{'texts.company_name' | i18next}}:</th>
-        <td>{{userInfo.company_name}}</td>
-      </tr>
-      <tr ng-if="userInfo.role === 1">
-        <th>{{'texts.credit' | i18next}}({{'texts.share' | i18next}}):</th>
-        <td>{{userInfo.credit}}({{userInfo.share}})</td>
-      </tr>
-    </table>
+    <form name="setAccountInfoForm" novalidate>
+      <table class="table table-striped table-responsive">
+        <tr>
+          <th>{{'texts.username' | i18next}}:</th>
+          <td>{{userInfo.username}}</td>
+        </tr>
+        <tr>
+          <th>{{'texts.address_city' | i18next}}:</th>
+          <td>{{userInfo.address_city}}</td>
+        </tr>
+        <tr>
+          <th>{{'texts.address_street' | i18next}}:</th>
+          <td>{{userInfo.address_street}}</td>
+        </tr>
+        <tr>
+          <th>{{'texts.email' | i18next}}:</th>
+          <td>
+            <input type="text" id="email" name="email" class="form-control my-input" placeholder="{{'texts.email' | i18next}}" ng-model="userInfo.email" ng-class="{'input-error' : setAccountInfoForm.email.$invalid && (!setAccountInfoForm.email.$pristine || clickedAcc)}"/>
+          </td>
+        </tr>
+        <tr>
+          <th>{{'texts.phone_number' | i18next}}:</th>
+          <td>
+            <input type="text" id="phone_number" name="phone_number" class="form-control my-input" placeholder="{{'texts.phone_number' | i18next}}" ng-model="userInfo.phone_number" ng-class="{'input-error' : setAccountInfoForm.phone_number.$invalid && (!setAccountInfoForm.phone_number.$pristine || clickedAcc)}"/>
+          </td>
+        </tr>
+        <tr>
+        <tr>
+          <th>{{'texts.company_name' | i18next}}:</th>
+          <td>{{userInfo.company_name}}</td>
+        </tr>
+        <tr ng-if="userInfo.role === 1">
+          <th>{{'texts.credit' | i18next}}({{'texts.share' | i18next}}):</th>
+          <td>{{userInfo.credit}}({{userInfo.share}})</td>
+        </tr>
+      </table>
+    </form>
+    <div class="form-group text-center">
+      <div class="my-button big-button normal-button" ng-click="setInfo()">{{'texts.set_account_info' | i18next}}</div>
+    </div>
   </div>
   <div class="col-md-6 col-xs-12 col-md-offset-0">
     <h1>{{'texts.change_password' | i18next}}</h1>
