--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -4,7 +4,7 @@
         <h2>{{'texts.users' | i18next}} ({{users.length}})</h2>
         <input type="text" ng-model="id_transporter"/>
         <button ng-click="GetAuctionCache()">Get auction cache</button>
-        <button ng-click="BackUp()">BackUp</button>
+        <button ng-click="SendTestEmail()">TestEmail</button>
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
