- ve FF nešel toggle detailu, auto refresh ceny u detailu aukce

--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -207,7 +207,7 @@
     </div>
 </div>
 
-<script type="text/ng-template" id="modal_bid_auction" class="modal-content">
+<script type="text/ng-template" id="modal_bid_detail_auction" class="modal-content">
     <div class="modal-header">
         <h2>{{'texts.bid_auction_modal_title' | i18next}}</h2>
     </div>
