- podbarvení ceny v detailu aukce

--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -68,7 +68,7 @@
     <hr class="col-xs-12 col-sm-12 hidden-md hidden-lg">
     <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
 
-        <div ng-show="expired" class="row detail-row text-center">
+        <div ng-show="expired" class="row detail-row text-center price-box">
             <div class="detail-label col-xs-12 col-sm-12 col-md-5 col-lg-5">
                 <div class="price-label">
                     {{'texts.actual_price' | i18next}}
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div ng-show="!expired" class="row detail-row text-center">
+        <div ng-show="!expired" class="row detail-row text-center price-box">
             <div class="detail-label col-xs-12 col-sm-6 col-md-4 col-lg-5">
                 <div class="price-label">
                     {{'texts.actual_price' | i18next}}
