--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -1,8 +1,8 @@
 <m param="{route}">
 <div class="auction-detail embed bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <h1 class="main-header">{{'texts.auction.detail' | i18next}} - {{item.ID}} </h1>
-    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
-        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 no-padding-detail">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding-detail">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
             <div class="detail-row address col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <span class="glyphicon glyphicon-home"></span>
                 <span class="detail-label">
@@ -19,9 +19,88 @@
                 <span class="detail-content">{{item.address_to}}</span>
                 <div ng-if="item.unload_note" class="note">{{item.unload_note}}</div>
             </div>
-            <div class="col-xs-12 hidden-sm col-md-12 col-lg-12 margin-divider"></div>
+            <!--<div class="col-xs-12 hidden-sm col-md-12 col-lg-12 margin-divider"></div>-->
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 no-padding-detail">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
+
+            <div ng-show="expired" class="row detail-row text-center price-box">
+                <div class="detail-label col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                    <div class="price-label">
+                        {{'texts.actual_price' | i18next}}
+                    </div>
+                    <div class="price expired">
+                        {{item.current_price}},-
+                    </div>
+                </div>
+                <div class="detail-label col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                    <div class="info-block">
+                        <span class="glyphicon glyphicon-time"></span>
+                        {{'texts.auction_complete' | i18next}}
+                    </div>
+                </div>
+            </div>
+            <div ng-show="!expired" class="row detail-row text-center price-box">
+                <div class="detail-label col-xs-12 col-sm-6 col-md-4 col-lg-5">
+                    <div class="price-label">
+                        {{'texts.actual_price' | i18next}}
+                    </div>
+                    <div class="price" ng-class="{'new-price-big' : priceUpdated}">
+                        {{item.current_price}},-
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-8 col-lg-7">
+                    <div ng-show="isOwner" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 info-block info-block-win">
+                        <span class="glyphicon glyphicon-hand-right"></span>
+                        {{'texts.own_auction' | i18next}}
+                    </div>
+                    <div ng-show="!win && withBids && !isOwner" class="auction-bid detail-row">
+                        <div class="bid-inputs">
+                            <div class="bid-wrapper has-feedback has-feedback-right">
+                                <input type="text" ng-model="bid" ng-keypress="onkeyDown($event, bid)" class="form-control text-right my-input bid" placeholder="{{'texts.amount' | i18next}}"/>
+                                <span class="form-control-feedback">Kč</span>
+                            </div>
+                            <div class="my-button normal-button bid-button" ng-click="bidAuction(bid)">
+                                <span class="glyphicon glyphicon-circle-arrow-down"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div ng-show="win" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 info-block info-block-win">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                        {{'texts.auction_win' | i18next}}
+                    </div>
+                </div>
+            </div>
+            <hr ng-show="!expired || win || userIsBidder" class="small">
+            <div ng-show="!expired" class="detail-row text-center">
+                <span class="glyphicon glyphicon-hourglass"></span>
+                <span class="detail-content">
+                {{'texts.auction.ends_in' | i18next}}
+            </span>
+                <timer class="detail-label" countdown="item.secondsToEndAuction" max-time-unit="'day'" interval="1000">
+                    {{days}} {{'texts.days' | i18next}}, {{hhours}}:{{mminutes}}:{{sseconds}}
+                </timer>
+                <div class="note">{{item.end_auction}}</div>
+            </div>
+            <div ng-show="withBids && expired" class="detail-row row">
+                <div ng-show="win" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="auction-result">
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                        <span  class="win">{{'texts.auction_win' | i18next}}</span>
+                    </div>
+                </div>
+                <div ng-show="!win && userIsBidder" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="auction-result">
+                        <span class="glyphicon glyphicon-thumbs-down"></span>
+                        <span class="lose">{{'texts.auction_lose' | i18next}}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--<hr ng-show="!expired || win || userIsBidder" class="small">-->
+    </div>
+    <hr class="col-xs-12 col-sm-12">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding-detail">
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-pencil"></span>
@@ -65,82 +144,7 @@
             </div>
         </div>
     </div>
-    <hr class="col-xs-12 col-sm-12 hidden-md hidden-lg">
-    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
-
-        <div ng-show="expired" class="row detail-row text-center price-box">
-            <div class="detail-label col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                <div class="price-label">
-                    {{'texts.actual_price' | i18next}}
-                </div>
-                <div class="price expired">
-                    {{item.current_price}},-
-                </div>
-            </div>
-            <div class="detail-label col-xs-12 col-sm-12 col-md-7 col-lg-7">
-                <div class="info-block">
-                    <span class="glyphicon glyphicon-time"></span>
-                    {{'texts.auction_complete' | i18next}}
-                </div>
-            </div>
-        </div>
-        <div ng-show="!expired" class="row detail-row text-center price-box">
-            <div class="detail-label col-xs-12 col-sm-6 col-md-4 col-lg-5">
-                <div class="price-label">
-                    {{'texts.actual_price' | i18next}}
-                </div>
-                <div class="price" ng-class="{'new-price-big' : priceUpdated}">
-                    {{item.current_price}},-
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-8 col-lg-7">
-                <div ng-show="isOwner" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 info-block info-block-win">
-                    <span class="glyphicon glyphicon-hand-right"></span>
-                    {{'texts.own_auction' | i18next}}
-                </div>
-                <div ng-show="!win && withBids && !isOwner" class="auction-bid detail-row">
-                    <div class="bid-inputs">
-                        <div class="bid-wrapper has-feedback has-feedback-right">
-                            <input type="text" ng-model="bid" ng-keypress="onkeyDown($event, bid)" class="form-control text-right my-input bid" placeholder="{{'texts.amount' | i18next}}"/>
-                            <span class="form-control-feedback">Kč</span>
-                        </div>
-                        <div class="my-button normal-button bid-button" ng-click="bidAuction(bid)">
-                            <span class="glyphicon glyphicon-circle-arrow-down"></span>
-                        </div>
-                    </div>
-                </div>
-                <div ng-show="win" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 info-block info-block-win">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    {{'texts.auction_win' | i18next}}
-                </div>
-            </div>
-        </div>
-        <hr ng-show="!expired || win || userIsBidder" class="small">
-        <div ng-show="!expired" class="detail-row text-center">
-            <span class="glyphicon glyphicon-hourglass"></span>
-            <span class="detail-content">
-                {{'texts.auction.ends_in' | i18next}}
-            </span>
-            <timer class="detail-label" countdown="item.secondsToEndAuction" max-time-unit="'day'" interval="1000">
-                {{days}} {{'texts.days' | i18next}}, {{hhours}}:{{mminutes}}:{{sseconds}}
-            </timer>
-            <div class="note">{{item.end_auction}}</div>
-        </div>
-        <div ng-show="withBids && expired" class="detail-row row">
-            <div ng-show="win" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="auction-result">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span  class="win">{{'texts.auction_win' | i18next}}</span>
-                </div>
-            </div>
-            <div ng-show="!win && userIsBidder" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="auction-result">
-                    <span class="glyphicon glyphicon-thumbs-down"></span>
-                    <span class="lose">{{'texts.auction_lose' | i18next}}</span>
-                </div>
-            </div>
-        </div>
-        <hr ng-show="!expired || win || userIsBidder" class="small">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <h3>
             <span class="glyphicon glyphicon-sort-by-attributes"></span>
             {{'texts.auction.history_amount' | i18next}}
