--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -5,6 +5,7 @@
         <input type="text" ng-model="id_transporter"/>
         <button ng-click="GetAuctionCache()">Get auction cache</button>
         <button ng-click="SendTestEmail()">TestEmail</button>
+        <button ng-click="SendTestSms()">TestSms</button>
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
