--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -6,6 +6,7 @@
         <button ng-click="GetAuctionCache()">Get auction cache</button>
         <button ng-click="SendTestEmail()">TestEmail</button>
         <button ng-click="SendTestSms()">TestSms</button>
+        <button ng-click="SendNews()">SendNews</button>
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
