--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -13,7 +13,7 @@
             <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div ng-if="!drivers.length" class="no-auction">{{'texts.no_drivers' | i18next}}</div>
                 <div class="auction-item" ng-repeat="driver in drivers">
-                    <detail-user driver="{driver}"></detail-user>
+                    <detail-user driver="{driver}" all-drivers="{ownDrivers}"></detail-user>
                 </div>
                 <paging item-count="drivers.length" all-items-count="allDriversCount"></paging>
             </div>
