--- a/app/components/Auction/Detail/detailAuction.html
+++ b/app/components/Auction/Detail/detailAuction.html
@@ -103,6 +103,13 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding-detail">
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
+                    <i class="normal-icon awes-icon far fa-building"></i>
+                    <span>{{'texts.auction.owner_company_name' | i18next}}:</span>
+                </div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.owner_company_name}}</span></div>
+            </div>
+            <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-pencil"></span>
                     <span>{{'texts.auction.freight_description' | i18next}}:</span>
                 </div>
